[package]
name = "herodotus_sharp_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "multipart"],default-features = false }
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
serde_json = { version = "1.0.127" }
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.1"
cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser.git", rev = "f175d58" }
starknet-types-core = "~0.1.4"
anyhow = "1.0.89"