[package]
name = "atlantic_client"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/chudkowsky/atlantic_client"
description = "Atlantic client for generating proofs with Atlantic Prover"
authors = ["Mateusz Chudkowski"]

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "multipart","rustls-tls"],default-features = false }
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
serde_json = { version = "1.0.127" }
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.1"
anyhow = "1.0.89"
url = "2.5.2"
