[package]
name = "atlantic_client"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
reqwest.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
anyhow.workspace = true
url.workspace = true